src/site/resources/css/override.css
.content_container {
  padding: 0 0 0;
  border-bottom: 0;
}
.container-fluid {
  padding-right: 0;
  padding-left: 0;
}
div.alert {
  padding: 15px 15px 15px;
}
blockquote {
  font-size: 13px;
}
a.anchor {
  display: block;
  position: relative;
  top: -100px;
  visibility: hidden;
}

